# FL-Semiasync

./: .gitignore  README.md  configWriter.py  delete.py  local_execution_yaml.py  pyproject.toml  run.py
Analysis/: comparative_graph.py  comparative_metrics.py  comparative_times.py  comparative_windows.py  grafica.py  timestamp_graph.py
app_code/: __init__.py  client_app.py  client_app_deprecated.py  history.py  server.py  server_app.py  server_deprecated.py  server_modsemiasync.py  server_semiasync.py  serverapp.py  start_driver.py  task.py  task_deprecated.py
app_code/nets/: mobilenet.py
app_code/strategies/: FedAdagrad.py  FedAdam.py  FedAvg.py  FedMOpt.py  FedMedian.py  FedOpt.py  FedProx.py  FedTrimmedAvg.py  FedYogi.py  QFedAvg.py  data_analyst.py  early_stopping.py
devices_configs/: config.ini  configWriter.py  initConfig.py
devices_configs/master/: docker-compose.yml  prometheus.yml
devices_configs/slave/: docker-compose.yml  prometheus.yml
dockerfiles/: clientapp.Dockerfile  local-execution.yml  remote-execution.yml  serverapp.Dockerfile
examples/SARTECO2025/FedAvg_heterogeneous/sync1_dataiid/: total_times.csv
examples/SARTECO2025/FedAvg_heterogeneous/sync1_datanoniid/: total_times.csv
examples/SARTECO2025/FedAvg_heterogeneous/sync2_dataiid/: total_times.csv
examples/SARTECO2025/FedAvg_heterogeneous/sync2_datanoniid/: total_times.csv
examples/SARTECO2025/FedAvg_heterogeneous/sync3_dataiid/: total_times.csv
profiles/: client_1.yaml  client_2.yaml  client_3.yaml  client_4.yaml  client_5.yaml  client_6.yaml  client_7.yaml  client_8.yaml
(+314 files in other folders)
