[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "FL-Semiasync"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.16.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "toml",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "victor"

[tool.flwr.app.components]
serverapp = "app_code.server_app:app"
clientapp = "app_code.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
fraction-fit = 1
local-epochs = 1

[tool.flwr.federations]
default = "local-execution"

[tool.flwr.federations.remote-execution]
address = "172.24.100.143:9093"
insecure = true

[tool.flwr.federations.local-execution]
address = "127.0.0.1:9093"
insecure = true